change in html and css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -39,39 +38,28 @@
                 <div class="content" id="tab-2">
                     <p class="para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae quia, sit,
                         perferendis culpa rem dolorum nostrum laudantium at praesentium dolore iure voluptas? Placeat
-                        enim
-                        nobis voluptas hic inventore veniam, delectus quae aspernatur aut illo repudiandae non fuga
-                        maiores
-                        accusantium maxime officia. Explicabo earum modi, iste consectetur quae velit perferendis
-                        molestias
-                        tempora nisi tempore itaque illo iure, neque corrupti, harum numquam consequatur natus quod
-                        repellat
-                        magni.</p>
+                        enim nobis voluptas hic inventore veniam, delectus quae aspernatur aut illo repudiandae non fuga
+                        maiores accusantium maxime officia. Explicabo earum modi, iste consectetur quae velit
+                        perferendis molestias tempora nisi tempore itaque illo iure, neque corrupti, harum numquam
+                        consequatur natus quod repellat magni.</p>
                     <p class="para-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, accusantium
                         necessitatibus distinctio at ut autem, animi assumenda dicta commodi voluptate excepturi
-                        quaerat. Ad
-                        tenetur, doloribus sed eligendi dolorum, natus quia autem magni, fugit nesciunt doloremque amet
-                        blanditiis.</p>
+                        quaerat. Ad tenetur, doloribus sed eligendi dolorum, natus quia autem magni, fugit nesciunt
+                        doloremque amet blanditiis.</p>
                 </div>
                 <div class="content" id="tab-3">
                     <p class="para">A paragraph is a series of sentences that are organized and coherent, and are all
-                        related to a
-                        single topic. Almost
-                        every piece of writing you do that is longer than a few sentences should be organized into
-                        paragraphs. This is because
-                        paragraphs show a reader where the subdivisions of an essay begin and end, and thus help the
-                        reader
-                        see the organization
-                        of the essay and grasp its main points. </p>
+                        related to a single topic. Almost every piece of writing you do that is longer than a few
+                        sentences should be organized into paragraphs. This is because paragraphs show a reader where
+                        the subdivisions of an essay begin and end, and thus help the reader see the organization of the
+                        essay and grasp its main points.
+                    </p>
                     <p class="para-2">A paragraph is a series of sentences that are organized and coherent, and are all
-                        related to a
-                        single topic. Almost
-                        every piece of writing you do that is longer than a few sentences should be organized into
-                        paragraphs. This is because
-                        paragraphs show a reader where the subdivisions of an essay begin and end, and thus help the
-                        reader
-                        see the organization
-                        of the essay and grasp its main points. </p>
+                        related to a single topic. Almost every piece of writing you do that is longer than a few
+                        sentences should be organized into paragraphs. This is because paragraphs show a reader where
+                        the subdivisions of an essay begin and end, and thus help the reader see the organization of the
+                        essay and grasp its main points.
+                    </p>
                 </div>
             </div>
         </div>
